--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp'
 }
 
 apply from: '../shared_dependencies.gradle'
@@ -46,7 +46,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     androidTestImplementation "androidx.room:room-testing:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
 
     // database encryption
     implementation "net.zetetic:android-database-sqlcipher:$sqlcypher_verstion"
